bugfix: on overflowing .app-content div (#201)

--- a/src/App.scss
+++ b/src/App.scss
@@ -118,6 +118,7 @@
       flex-grow: 1;
       display: flex;
       flex-direction: column;
+      overflow-y: scroll;
   }
 }
 
